cmake_minimum_required(VERSION 3.15)
project(Project)
set(CMAKE_CXX_STANDARD 14)
set(CMAKE_CXX_FLAGS_RELEASE “-O2”)


add_executable(test test/test.cpp)


add_executable(201 questions/201.cpp)
add_executable(202 questions/202.cpp)
add_executable(HelloWorld HelloWorld.cpp)
add_executable(203 questions/203.cpp)
add_executable(204 questions/204.cpp)
add_executable(40 test/40.cpp)
add_executable(205 questions/205.cpp)
add_executable(206 questions/206.cpp)
add_executable(208 questions/208.cpp)
add_executable(209 questions/209.cpp)
add_executable(210 questions/210.cpp)
add_executable(211 questions/211.cpp)
add_executable(212 questions/212.cpp)
add_executable(213 questions/213.cpp)
add_executable(214 questions/214.cpp)
add_executable(215 questions/215.cpp)
add_executable(216 questions/216.cpp)
add_executable(217 questions/217.cpp)
add_executable(218 questions/218.cpp)
add_executable(219 questions/219.cpp)
add_executable(220 questions/220.cpp)
add_executable(221 questions/221.cpp)
add_executable(222 questions/222.cpp)
add_executable(223 questions/223.cpp)
add_executable(224 questions/224.cpp)
add_executable(225 questions/225.cpp)
add_executable(226 questions/226.cpp)
add_executable(41 test/41.cpp)
add_executable(227 questions/227.cpp)
add_executable(229 questions/229.cpp)
add_executable(228 questions/228.cpp)
add_executable(230 questions/230.cpp)
add_executable(231 questions/231.cpp)
add_executable(232 questions/232.cpp)
add_executable(233 questions/233.cpp)
add_executable(234 questions/234.cpp)
add_executable(235 questions/235.cpp)
add_executable(236 questions/236.cpp)
add_executable(237 questions/237.cpp)
add_executable(238 questions/238.cpp)
add_executable(239 questions/239.cpp)
add_executable(240 questions/240.cpp)
add_executable(241 questions/241.cpp)